some small width gap and height problems fixed

--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ ul {
   width: 43.1rem;
   flex-wrap: wrap;
   border-top: gray solid 2px;
+  gap: 1.2rem;
 }
 
 .text {
@@ -197,7 +198,7 @@ ul {
   height: 6.6rem;
   justify-content: space-around;
 
-  gap: 0.4rem;
+  gap: 0.8rem;
   padding: 0.7rem;
 }
 
@@ -270,6 +271,7 @@ span {
         padding: 2rem;
         background-color: #ffffff;
         border-right: 1px solid;
+        height: 40rem;
     
     -webkit-box-shadow: 5px 5px 8px -5px rgba(0, 0, 0, 0.67);
     -moz-box-shadow: 5px 5px 8px -5px rgba(0, 0, 0, 0.67);
@@ -280,22 +282,27 @@ span {
         display: flex;
         justify-content: center;
         gap: 1rem;
+        padding-top: 1rem;
        
     
 
         
       
     }
-
+.bottom-content h2{
+    color: #1D88AD;
+    
+    
+}
     .left-content{
-        height: 284px;
-        width: 350px;
+        height: 18rem;
+        width: 21.85rem;
 
     }
 
     .right-content{
-        height: 284px;
-        width: 340px;
+        height: 18rem;
+        width: 21.85rem;
 
     }
 
